[package]
name = "subtitle-lsp"
description = "An LSP for subtitle files"
version = "0.1.0"
homepage = "https://github.com/lonnen/subtitle-lsp"
authors = ["lonnen <chris.lonnen@gmail.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[dependencies]
dashmap = "6.1.0"
env_logger = "0.11.5"
nom = "8.0.0"
serde_json = "1.0.139"
tokio = { version = "1.36.0", features = ["full"]}
tower-lsp = "0.20.0"
